// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`justifi-checkout-core should display error state correctly 1`] = `<checkout-core />`;

exports[`justifi-checkout-core should display loading state correctly 1`] = `
<justifi-checkout-core class="body">
  <template shadowrootmode="open">
    <style></style>
    <div class="gy-3 jfi-checkout-core row">
      <div class="col-12 mb-4">
        <h2 class="fs-5 fw-bold jfi-header pb-3">
          Summary
        </h2>
        <section>
          <div>
            <justifi-skeleton height="24px"></justifi-skeleton>
          </div>
          <div class="visually-hidden">
            <div class="jfi-payment-description"></div>
            <div class="jfi-payment-total">
              <span class="jfi-payment-total-label">
                Total
              </span>
              <span class="jfi-payment-total-amount">
                $0.00
              </span>
            </div>
          </div>
        </section>
      </div>
      <div class="col-12">
        <slot name="insurance"></slot>
      </div>
      <div class="col-12">
        <h2 class="fs-5 fw-bold jfi-header pb-3">
          Payment
        </h2>
        <h3 class="fs-6 fw-bold lh-lg">
          Select payment type
        </h3>
        <div class="d-flex flex-column">
          <section>
            <div>
              <justifi-skeleton height="300px" variant="rounded"></justifi-skeleton>
            </div>
            <div class="visually-hidden">
              <justifi-payment-method-options show-ach="" show-bnpl="" show-card="" show-saved-payment-methods=""></justifi-payment-method-options>
            </div>
          </section>
        </div>
      </div>
      <div class="col-12">
        <div class="d-flex justify-content-end">
          <button class="btn btn-primary jfi-submit-button jfi-submit-button-loading" disabled="" part="pay-button" type="submit">
            <div class="spinner-border spinner-border-sm" role="status">
              <span class="visually-hidden">
                Loading...
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
  </template>
</justifi-checkout-core>
`;

exports[`justifi-checkout-core should set checkout correctly to state 1`] = `
<justifi-checkout-core class="body">
  <template shadowrootmode="open">
    <style></style>
    <div class="gy-3 jfi-checkout-core row">
      <div class="col-12 mb-4">
        <h2 class="fs-5 fw-bold jfi-header pb-3">
          Summary
        </h2>
        <section>
          <div class="visually-hidden">
            <justifi-skeleton height="24px"></justifi-skeleton>
          </div>
          <div>
            <div class="jfi-payment-description">
              One Chocolate Donut
            </div>
            <div class="jfi-payment-total">
              <span class="jfi-payment-total-label">
                Total
              </span>
              <span class="jfi-payment-total-amount">
                $17.99
              </span>
            </div>
          </div>
        </section>
      </div>
      <div class="col-12">
        <slot name="insurance"></slot>
      </div>
      <div class="col-12">
        <h2 class="fs-5 fw-bold jfi-header pb-3">
          Payment
        </h2>
        <h3 class="fs-6 fw-bold lh-lg">
          Select payment type
        </h3>
        <div class="d-flex flex-column">
          <section>
            <div class="visually-hidden">
              <justifi-skeleton height="300px" variant="rounded"></justifi-skeleton>
            </div>
            <div>
              <justifi-payment-method-options account-id="acc_5Et9iXrSSAZR2KSouQGAWi" paymentamount="1799" paymentmethodgroupid="pmg_12TH1LBNpsrdEXxWyxFjQv" show-ach="" show-bnpl="" show-card="" show-saved-payment-methods=""></justifi-payment-method-options>
            </div>
          </section>
        </div>
      </div>
      <div class="col-12">
        <div class="d-flex justify-content-end">
          <button class="btn btn-primary jfi-submit-button" part="pay-button" type="submit">
            Pay
          </button>
        </div>
      </div>
    </div>
  </template>
</justifi-checkout-core>
`;
